--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Timed Challenge 4 Quiz</title>
   <link rel="stylesheet" type="text/css" href="./Assets/css/style.css">
 </head>
+
 <body>
-  <!-- insert website code, images, tables, javascript, everything needs to be within the body-->
+    <header>Welcome to the Javascript Quiz</header>
+    <p id="countdown">15:00</p>
+    <
     <script src="./Assets/js/script.js"></script>
 </body>
-</html>
+
+</html> 
